Fix CSS on mobile devices. Fixes #17

--- a/src/L.Control.Locate.css
+++ b/src/L.Control.Locate.css
@@ -24,6 +24,23 @@
     height: 27px;
 }
 
+.leaflet-touch .leaflet-control-locate {
+    box-shadow: none;
+    border: 4px solid rgba(0,0,0,0.3);
+}
+
+.leaflet-touch .leaflet-control-locate a {
+    width: 30px;
+    height: 30px;
+}
+
+.leaflet-touch .leaflet-control-locate .leaflet-bar-part {
+    -webkit-border-radius: 7px 7px 7px 7px;
+            border-radius: 7px 7px 7px 7px;
+    border-bottom: none;
+    }
+
+
 .leaflet-control-locate a {
 	background-image: url(images/locate.png);
 }
